--- a/week-1/assignments/style.css
+++ b/week-1/assignments/style.css
@@ -155,3 +155,27 @@ p {
     }
   }
    
+  .linksss {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 23em;
+    right: 4em;
+  }
+
+  .imagesss {
+    position:absolute;
+    float:right;
+    margin-top:20em;
+    margin-left:45em;
+  }
+
+  .hours {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position:absolute;
+    left: 50em;
+    top: 39em;
+    font-weight: bold;
+  }
